- [Feature] Updated application icon (Thanks to Admiral Potato)
- [Bugfix] New connection dialog remembers field values
- [Bugfix] Correctly parsing filenames beginning with whitespace (FTP)
- [Bugfix] Don't allow editing files with well known binary file type extensions
- [Bugfix] Excluding individual files when synchronising
- [Bugfix] Improved stability using outline view

2.5b2
- [Localize] Indonesian Localization
- [Bugfix] Resorting browser view will not change selection
- [Bugfix] Remember state of expanded items in outline view
- [Feature] Updated to Growl 0.7
- [Feature] Edit menu shows all available editors

2.5b1
- [Feature] FTP using TLS support (using AUTH TLS as in draft-murray-auth-ftp-ssl-16) for the control channel (sending login credentials) and optionally the data channel (file listings and transfers) if the server is capable of.
- [Feature] Store X.509 certificates in Keychain
- [Feature] Custom icon with progress bar in the Finder when downloading files
- [Feature] Browser outline view
- [Feature] Toolbar button to switch view
- [Feature] History of recently connected hosts
- [Feature] Set character encoding per bookmark
- [Feature] Set connect mode (active/passive) per bookmark (FTP)
- [Feature] Show folders in working directory (and autocomplete) in 'Go to Folder' dialog
- [Feature] Exclude duplicate files from transfer upon alert
- [Feature] Apply button in file info dialog
- [Feature] Duplicate files on server
- [Feature] Preferences window with toolbar
- [Feature] Option to turn off disconnect prompt in Preferences
- [Feature] Option to keep connection alive in Preferences
- [Feature] Choose character encoding in connection dialog
- [Feature] Choose connect mode in connection dialog (FTP)
- [Feature[ Drop down list of folders in Goto dialog
- [Feature] Sorting files by permission
- [Feature] UTF-8 is now used as the default character encoding
- [Feature] Edit with non-default editor using the browser context menu

2.4.6