@@ -14,11 +14,14 @@
 - [Feature] Synchronize bookmarks with .Mac
 - [Feature] Send custom commands to server (FTP)
 - [Feature] Auto scrolling log view
+- [Feature] Updated application icon (Thanks to Admiral Potato)
 - [Bugfix] New connection dialog remembers field values
 - [Bugfix] Correctly parsing filenames beginning with whitespace (FTP)
 - [Bugfix] Don't allow editing files with well known binary file type extensions
 - [Bugfix] Excluding individual files when synchronising
-- [Bugfix] Various bugfixes reported by users
+- [Bugfix] Improved stability using outline view
+- [Bugfix] Remember sorted column and direction
+- [Bugfix] Sort child items in browser outline view 
 
 2.5b2
 - [Localize] Indonesian Localization
